--- a/Meta NFT/src/scss/partials/_varaible.scss
+++ b/Meta NFT/src/scss/partials/_varaible.scss
@@ -4,3 +4,8 @@ $white_color:#fff;
 $pink_color:#f70361;
 $line_color:linear-gradient(124deg,#f95a85,#f70361,#f95420);
 $font_700_w:700;
+$drop_color:#f9f9f9;
+$black_:#0b1124;
+$rgba_255_003:rgba(255, 255, 255, 0.03);
+$rgba_255_01:rgba(255, 255, 255, 0.1);
+$rgba_255_04:rgba(255, 255, 255, .04);
