--- a/Meta NFT/src/scss/style.css
+++ b/Meta NFT/src/scss/style.css
@@ -325,18 +325,77 @@ body {
   align-items: center;
 }
 #anime .container .boxing {
+  margin: 0 auto;
   color: #fff;
   background: rgba(255, 255, 255, 0.03);
   border-radius: 24px;
   border: 2px solid rgba(255, 255, 255, 0.1);
   padding: 20px;
   transition: all 0.3s ease-in-out;
-  overflow: hidden;
   transform: translateY(10px);
-  width: 100%;
-  height: 422px;
+  width: 350px;
+  height: 475px;
+  overflow: hidden;
 }
 #anime .container .boxing:hover {
-  transform: translate(0);
+  transform: translateY(0);
   border: 2px solid #f70361;
+}
+#anime .container .boxing .all:hover .abid {
+  transform: translateY(0);
+}
+#anime .container .boxing .all .img {
+  width: 300px;
+  height: 300px;
+  position: relative;
+  overflow: hidden;
+}
+#anime .container .boxing .all .img img {
+  border-radius: 30px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+#anime .container .boxing .all .heart a {
+  width: 35px;
+  height: 35px;
+  position: absolute;
+  right: 10px;
+  top: 7px;
+  line-height: 35px;
+  background: rgba(33, 44, 65, 0.35);
+  border-radius: 10px;
+  text-align: center;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+}
+#anime .container .boxing .all .heart a i {
+  transition: 0.3s ease-in-out;
+  color: #eee;
+}
+#anime .container .boxing .all .heart a i:hover {
+  color: #f70361;
+}
+#anime .container .boxing .all .abid {
+  width: 145px;
+  height: 50px;
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #343434;
+  text-decoration: none;
+  background: #fff;
+  border-radius: 50px;
+  transform: translateY(300px);
+  transition: 0.3s ease-in-out;
+}
+#anime .container .boxing .all .abid:hover {
+  color: #fff;
+  background: linear-gradient(124deg, #f95a85, #f70361, #f95420);
 }/*# sourceMappingURL=style.css.map */
