--- a/Meta NFT/src/scss/pages/home/_home.scss
+++ b/Meta NFT/src/scss/pages/home/_home.scss
@@ -58,7 +58,7 @@
                 &:hover{ color: $pink_color; }
                 i{
                     @include Img($wid:20px,$heit:20px,$flow:hidden);
-                    @include Text($ground:$pink_color,$colors:$white_color);
+                    @include Text($ground:$pink_color,$colors:$white_color,$radius:10px);
                     @include Flex($j_content:center,$a_items:center);
                 }
             }
@@ -123,7 +123,7 @@
                 &:hover{ color: $pink_color; }
                 i{
                     @include Img($wid:20px,$heit:20px,$flow:hidden);
-                    @include Text($ground:$pink_color,$colors:$white_color);
+                    @include Text($ground:$pink_color,$colors:$white_color,$radius:10px);
                     @include Flex($j_content:center,$a_items:center);
                 }
             }
@@ -169,6 +169,104 @@
                     &:hover{
                         color: $white_color;
                         background: $line_color;
+                    }
+                }
+                .nft_box{
+                    .nft_titlewrap{
+                        @include Flex($j_content:space-between,$a_items:center);
+                        padding-top: 10px;
+                        h3{
+                            font-family: 'Michroma', sans-serif;
+                            font-size: 20px;
+                            a{
+                                @include Text($colors:$white_color,$t_decoration:none);
+                                transition: all 0.3s ease;
+                                &:hover{ color: $pink_color; }
+                            }
+                        }
+                        i{
+                            @include Text($ground:$pink_color,$radius:50px);
+                            @include Img($wid:30px,$heit:30px);
+                            @include Flex($j_content:center,$a_items:center);
+                        }
+                    }
+                    .nft_wordlife{
+                        @include Flex($j_content:space-between,$a_items:center);
+                        padding: 20px 0px;
+                        .nft_img{
+                            @include Flex($a_items:center,$gap:10px);
+                            img{
+                                @include Img($wid:50px,$heit:50px);
+                                border-radius: 15px;
+                            }
+                            .nft_name{
+                                font-family: 'Michroma', sans-serif;
+                                span{ @include Text($f_size:13px,$colors:$e_color,$l_height:21px); }
+                                h4{ @include Text($f_size:14px,$l_height:22px,$colors:$white_color); }
+                            }
+                        }
+                        .nft_price{
+                            font-family: 'Michroma', sans-serif;
+                            span{ @include Text($f_size:10px,$colors:$e_color,$l_height:21px); }
+                            h4{ @include Text($f_size:14px,$l_height:30px,$colors:$white_color); }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+#artist{
+    padding: 50px 0px;
+    .container{
+        max-width: 1140px;
+        .text{
+            @include Flex($j_content:space-between,$a_items:center);
+            h3{
+                font-family: 'Montserrat', sans-serif;
+                @include Text($colors:$white_color,$f_size:28px,$f_weight:$font_700_w,$l_spacing:.6px);
+            }
+            a{
+                @include Flex($a_items:center,$gap:10px);
+                @include Text($f_size:15px,$f_weight:600,$colors:$white_color,$t_decoration:none);
+                transition: .3s ease-in-out;
+                &:hover{ color: $pink_color; }
+                i{
+                    @include Img($wid:20px,$heit:20px,$flow:hidden);
+                    @include Text($ground:$pink_color,$colors:$white_color,$radius:10px);
+                    @include Flex($j_content:center,$a_items:center);
+                }
+            }
+        }
+        .boxing{
+            @include Text($ground:$rgba_255_003,$colors:$white_color,$border:2px solid $rgba_255_01,$radius:24px);
+            padding: 10px 10px;
+            overflow: hidden;
+            @include Img($wid:$wid_100,$heit:104px);
+            @include Flex($a_items:center);
+            a{
+                img{
+                    margin-right: 15px;
+                    @include Img($wid:80px,$heit:80px);
+                    @include Text($radius:24px,$border:3px solid #252743);
+                }
+            }
+            .txt{
+                a{
+                    font-family: 'Michroma', sans-serif;
+                    @include Text($f_size:16px,$f_weight:600,$colors:$white_color,$l_spacing:.4px,$t_decoration:none);
+                    display: inline-block;
+                    margin-bottom: 8px;
+                }
+                p{
+                    font-family: 'Michroma', sans-serif;
+                    @include Flex($a_items:center,$gap:5px);
+                    @include Text($f_size:11px,$f_weight:600);
+                    margin-bottom: 0;
+                    i{
+                        @include Text($ground:$pink_color,$radius:50px);
+                        @include Img($wid:20px,$heit:20px);
+                        @include Flex($j_content:center,$a_items:center); 
                     }
                 }
             }
