--- a/Meta NFT/src/scss/partials/_varaible.scss
+++ b/Meta NFT/src/scss/partials/_varaible.scss
@@ -10,3 +10,4 @@ $rgba_255_003:rgba(255, 255, 255, 0.03);
 $rgba_255_01:rgba(255, 255, 255, 0.1);
 $rgba_255_04:rgba(255, 255, 255, .04);
 $rgb_33_44: rgb(33 44 65 /35%);
+$e_color:#eee;
