--- a/Meta NFT/src/scss/partials/_mixin.scss
+++ b/Meta NFT/src/scss/partials/_mixin.scss
@@ -1,4 +1,4 @@
-@mixin Img($wid:null,$heit:null,$pos:null,$z:null,$flow:null,$o_fit:null,$o_pos:null,$right:null,$top:null,$left:null){
+@mixin Img($wid:null,$heit:null,$pos:null,$z:null,$flow:null,$o_fit:null,$o_pos:null,$right:null,$top:null,$left:null,$botom:null){
     width: $wid;
     height: $heit;
     position: $pos;
@@ -8,6 +8,7 @@
     object-position: $o_pos;
     right: $right;
     top: $top;
+    bottom: $botom;
     left: $left;
 }
 @mixin Flex($j_content:null,$a_items:null,$gap:null,$f_direction:null){
