--- a/Meta NFT/src/scss/partials/_varaible.scss
+++ b/Meta NFT/src/scss/partials/_varaible.scss
@@ -11,3 +11,4 @@ $rgba_255_01:rgba(255, 255, 255, 0.1);
 $rgba_255_04:rgba(255, 255, 255, .04);
 $rgb_33_44: rgb(33 44 65 /35%);
 $e_color:#eee;
+$befor_radius:linear-gradient(180deg, #109b9b -43.08%, #052a2a -7.55%, #2b7a7a 33.87%, #27c793 82.91%);
