--- a/Meta NFT/src/scss/style.css
+++ b/Meta NFT/src/scss/style.css
@@ -853,4 +853,96 @@ body {
   height: 575px;
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+#bird {
+  padding: 50px 0px;
+}
+#bird .container {
+  max-width: 1140px;
+}
+#bird .container .txt {
+  font-family: "Montserrat", sans-serif;
+}
+#bird .container .txt h4 {
+  color: #f70361;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 0.6px;
+}
+#bird .container .txt h3 {
+  margin-bottom: 20px;
+  color: #fff;
+  font-size: 42px;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: 0.6px;
+}
+#bird .container .txt p {
+  margin-bottom: 30px;
+  color: #d1cccc;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 1.8;
+}
+#bird .container .txt button {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+  background: linear-gradient(124deg, #f95a85, #f70361, #f95420);
+  border-radius: 30px;
+  letter-spacing: 0.3px;
+  text-align: center;
+  min-width: 204px;
+  display: inline-block;
+  padding: 14px 40px;
+  transition: all 0.3s ease;
+}
+#bird .container .txt button:hover {
+  background: linear-gradient(124deg, #f95420, #f70361, #f95a85);
+}
+#bird .container .img {
+  width: 100%;
+}
+#bird .container .img img {
+  width: 100%;
+  height: 497;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+#about {
+  position: relative;
+  padding-top: 170px;
+  padding-bottom: 110px;
+  color: #fff;
+  text-align: center;
+  background: #040722;
+  background-size: cover;
+  overflow: hidden;
+}
+#about::before {
+  content: "";
+  width: 300px;
+  height: 300px;
+  background: linear-gradient(180deg, #109b9b -43.08%, #052a2a -7.55%, #2b7a7a 33.87%, #27c793 82.91%);
+  filter: blur(60px);
+  display: inline-block;
+  position: absolute;
+  top: 15%;
+  right: -191px;
+  border-radius: 100%;
+  opacity: 0.45;
+  z-index: 1;
+}
+#about .container {
+  max-width: 1140px;
+}
+#about .container h3 {
+  font-size: 50px;
+  font-weight: 700;
+  margin-bottom: 7px;
+  font-family: "Michroma", sans-serif;
 }/*# sourceMappingURL=style.css.map */
